--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -10,6 +10,13 @@
 
   </head>
   <body>
-    <h1>Weekend Challenge 2</h1>
+    <h1>AJAX Requests</h1>
+      <p>Phirephiters Information</p>
+      <div id='dataContainer'></div>
+      <div id='navigation'>
+        <button id='next-button'>Next</button>
+        <button id='prev-button'>Prev</button>
+        <div id='carousel'></div>
+      </div>
   </body>
 </html>
