--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Weekend Challenge 2</title>
 
+    <link rel="stylesheet" href="/styles/reset.css" />
     <link rel="stylesheet" href="/styles/style.css" />
 
     <script type="text/javascript" src="/vendor/jquery.min.js"></script>
@@ -11,7 +12,17 @@
   </head>
   <body>
     <h1>AJAX Requests</h1>
-      <p>Phirephiters Information</p>
+      <p><pre>                                                       )
+          ,%,                                     ) _(___[]_
+          %%%,&&&,                     ,%%,      (;`       /\
+          %Y/%&&&&                     %%%%   ___/_____)__/ _\__     ,%%,
+        ^^^||^&\Y&^^^^^^^^^^^^^^^^^^^^^%Y/%^^/ (_()   (  | /____/\^^^%%%%^^
+          `    || _,..=xxxxxxxxxxxx,    ||   |(' |LI (.)I| | LI ||   %\Y%
+         -=      /L_Y.-"""""""""`,-n-. `    @'---|__||___|_|____||_   ||
+        ___-=___.--'[========]|L]J: []\ __________@//@___________) )______
+       -= _ _ _ |/ _ ''_ " " ||[ -_ 4 |  _  _  _  _  _  _  _  _  _  _  _
+                '-(_)-(_)----'v'-(_)--'
+       --------------------------------------------------------------------</pre></p>
       <div id='dataContainer'></div>
       <div id='navigation'>
         <button id='next-button'>Next</button>
