--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,22 +1,39 @@
 body {
-  /*padding: 10px 80px 10px 10px;*/
+  padding: 40px 0px 0px 40px;
+}
+h1 {
   font-family: sans-serif;
+  font-size: 24px;
+}
+
+/*styling taken from http://fire.ascii.uk/*/
+pre {
+  display: block;
+  font-family: monospace;
+  white-space: pre;
+  margin: 1em 0px 1em;
 }
 
 h2 {
-  font-size: 18px;
+  font-family: sans-serif;
+  margin-top: 40px;
+  font-size: 24px;
 }
 h3 {
-  font-size: 16px;
+  font-family: sans-serif;
+  margin-top: 5px;
+  font-size: 18px;
 }
 
 h4 {
-  font-size: 12px;
+  font-family: sans-serif;
+  margin-top: 8px;
+  font-size: 14px;
   font-style: italic;
 }
 #navigation {
   position: fixed;
-  bottom: 20px;
+  bottom: 200px;
 
 }
 .box {
@@ -25,8 +42,13 @@ h4 {
   background-color: blue;
   margin: 5px;
   float: left;
+  box-shadow: 3px 3px 20px grey;
 }
 
 .active {
-  background-color: green;
+  background: red; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(-90deg, red, yellow); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(-90deg, red, yellow); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(-90deg, red, yellow); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(-90deg, red, yellow); /* Standard syntax */
 }
