--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -11,7 +11,7 @@
 
   </head>
   <body>
-    <h1>AJAX Requests</h1>
+    <h1>AJAX Requests Φ</h1>
       <p><pre>                                                       )
           ,%,                                     ) _(___[]_
           %%%,&&&,                     ,%%,      (;`       /\
